@@ -48,6 +48,7 @@
 
  Bug fixes:
 
+   - my_isettings_free_string_list(), ofa_settings_free_string_list(): be NULL-tolerant.
    - my_utils_uri_get_lines(): get rid of all empty lines at end of file.
    - ofaPreferences: plugins no more prevent the dialog closing.
    - ofaStreamFormatBin: if has string delimiter, then it must not be empty.
